--- a/index.html
+++ b/index.html
@@ -103,45 +103,87 @@
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Producción <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Agropecuaria</a></li>
-                    <li><a href="#">Tecnologías</a></li>
+                    <li><a href="#">Agropecuaria <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Tecnologías <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Consulta de eventos</a></li>
+                        <li><a href="#">Emeroteca</a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">Tipología <span class="caret"></span> </a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Agropecuaria</a></li>
-                        <li><a href="#">Tecnologías</a></li>
-                        <li><a href="#">Tipología</a></li>
+                        <li><a href="#">Reportes</a></li>
                       </ul>
-
                     </li>
                   </ul>
                 </li>
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acopio <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Infraestructura</a></li>
-                    <li><a href="#">Seguimiento</a></li>
+                    <li><a href="#">Infraestructura <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Seguimiento <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Precios <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Nacionales</a></li>
-                    <li><a href="#">Internacionales</a></li>
+                    <li><a href="#">Nacionales <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Internacionales <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Consulta de precios físicos</a></li>
+                        <li><a href="#">Consulta de precios futuros</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
+
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Costos de producción <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Agrícola y pecuaria</a></li>
-                    <li><a href="#">Precios e insumos</a></li>
+                    <li><a href="#">Precios e insumos <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
+
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Comercialización <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Normas</a></li>
+                    <li><a href="#">Normas <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistema de consulta </a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">Sanidad</a></li>
-                    <li><a href="#">Báses agrícolas</a></li>
+                    <li><a href="#">Báses agrícolas <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">Compradores y vendedores</a></li>
                     <li><a href="#">Certificaciones</a></li>
                   </ul>
@@ -149,8 +191,18 @@
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Comercio internacional <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Panorama internacional por producto agroalimentario</a></li>
-                    <li><a href="#">Importaciones y exportaciones</a></li>
+                    <li><a href="#">Panorama internacional por producto agroalimentario <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Importaciones y exportaciones <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Sistemas de consulta</a></li>
+                        <li><a href="#">Reportes</a></li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown">
@@ -254,6 +306,130 @@
 
       </div>
 
+      <!-- Iconos START -->
+
+      <div class="row">
+        <h3>Mercados Agrícolas</h3>
+        <div class="container mercados">
+
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-maiz.png"></a>
+            </div>
+            <h6>Maíz</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-trigo.png"></a>
+            </div>
+            <h6>Trigo</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-sorgo.png"></a>
+            </div>
+            <h6>Sorgo</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-frijol.png"></a>
+            </div>
+            <h6>Frijol</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-arroz.png"></a>
+            </div>
+            <h6>Arroz</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-cana_de_azucar.png"></a>
+            </div>
+            <h6>Caña de azucar</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-algodon.png"></a>
+            </div>
+            <h6>Algodón</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-cafe.png"></a>
+            </div>
+            <h6>Café</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-soya.png"></a>
+            </div>
+            <h6>Soya</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-limon.png"></a>
+            </div>
+            <h6>Limón</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-manzana.png"></a>
+            </div>
+            <h6>Manzana</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon agricola">
+              <a href=""><img class="img-responsive" src="img/icono-otros_agricolas.png"></a>
+            </div>
+            <h6>Otros</h6>
+          </div>
+        </div>  
+      </div>
+
+      <div class="row">
+        <h3>Mercados Pecuarios</h3>
+        <div class="container mercados">
+          <div class="col-md-1 col-md-offset-3 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-bovino.png"></a>
+            </div>
+            <h6>Bovino</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-porcino.png"></a>
+            </div>
+            <h6>Porcino</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-ave.png"></a>
+            </div>
+            <h6>Ave</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-leche.png"></a>
+            </div>
+            <h6>Leche</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-huevo.png"></a>
+            </div>
+            <h6>Huevo</h6>
+          </div>
+          <div class="col-md-1 col-sm-2 col-xs-2">
+            <div class="rounded-icon pecuarios">
+              <a href=""><img class="img-responsive" src="img/icono-otros_pecuarios.png"></a>
+            </div>
+            <h6>Otros</h6>
+          </div>
+        </div>
+        
+      </div>
+      <!-- Iconos END -->
 
 
 
