--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 
       <!-- Enlaces START -->
         
-      <div class="row clean-margin">
+      <div class="row clean-margin sitios">
         <div class="container center">
           <h3>Sitios relacionados</h3>
           <div class="row">
@@ -583,16 +583,15 @@
 
       <!-- Legal START -->
 
-      <div class="row clean-margin">
+      <div class="row clean-margin legal">
         <div class="container">
           <div class="center">
-            <img class="img-responsive footer-logo" src="img/sagarpa-logo.png">
+            <img class="img-responsive footer-logo" src="img/sagarpa-logo-white.png">
             <h5>CIMA-SAGARPA - ALGUNOS DERECHOS RESERVADOS © 2014 - POLÍTICAS DE PRIVACIDAD</h5>
               <p>Av. Municipio Libre 377, Col. Santa Cruz Atoyac, Del.Benito Juárez,C.P. 03310. México, D.F.</p>
               <p>Tel: (55) 3871-7300 Ext. 50212 y 50131</p>
-              <a href="http://200.38.185.109/swb/cima/Contacto">
-                <p>e-mail: cima@aserca.gob.mx</p>
-                <p>Comentarios sobre este Sitio de Internet</p>
+              <p>e-mail: cima@aserca.gob.mx</p>
+              <p><a href="http://200.38.185.109/swb/cima/Contacto">Comentarios sobre este Sitio de Internet</a></p>
               </a>
           </div>
         </div>
