Pantalla de error
Va

--- a/error.html
+++ b/error.html
@@ -237,114 +237,27 @@
       </div>
 
       <div class="row">
-
         <!-- Breadcrumb START -->
-          <div>
-            <ol class="breadcrumb" style="margin-bottom: 5px;">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#"> Sección padre</a></li>
-              <li class="active">Forms</li>
-            </ol>
+        <div>
+          <ol class="breadcrumb" style="margin-bottom: 5px;">
+            <li><a href="#">Inicio</a></li>
+            <li class="active">Error</li>
+          </ol>
+        </div>
+      <!-- Breadcrumb END -->
+        <h2>Disculpa, no encontramos la página solicitada.</h2>
+        <div class="panel">
+          <div class="panel-body">
+            <p>Es posible que ya no exista en el sitio, haya cambiado de ubicación o no esté disponible temporalmente.</p>
+            <p>Intenta lo siguiente:</p>
+            <ul>
+              <li>Verifica que hayas escrito correctamente la dirección.</li>
+              <li>Haz clic en la opción <a href="javascript:history.go(-1)" >Atrás</a> para intentar otro vínculo.</li>
+              <li>Utiliza el <a href="/swb/cima/Mapa_de_sitio" >mapa de sitio</a> del portal para ubicar la ruta de la página que deseas consultar.</li>
+              <li>Introduce en el campo de búsqueda una palabra clave que te ayude a encontrar la página que necesitas.</li>
+            </ul>
           </div>
-
-          <div class="">
-            <h2>Título de sección</h2>
-            <div class="alert alert-danger" role="danger">Alerta por error y omisión en datos requeridos</div>
-            <p class="text-muted">Los campos marcados con * son obligatorios.</p>
-            <div class="panel panel-success">
-              <!--<div class="panel-heading">
-                <h4 class="panel-title">Panel title</h4>
-              </div>-->
-              <div class="panel-body">
-                <form>
-                  <div class="col-md-4">
-                    <div class="row form-group  ">
-                      <label for="inputEmail" class="col-sm-3 form-control-label">Email</label>
-                      <div class="col-sm-9">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="row form-group  ">
-                      <label for="inputPassword3" class="col-sm-3 form-control-label">Password</label>
-                      <div class="col-sm-9">
-                      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="row form-group  ">
-                      <fieldset class="form-group">
-                        <label for="exampleSelect1" class="col-sm-3">Select</label>
-                        <div class="col-sm-9">
-                          <select class="form-control" id="exampleSelect1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                          </select>
-                        </div>
-                      </fieldset>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="row form-group  ">
-                      <label class="col-sm-3">Datepicker</label>
-                      <div id="datetimepicker4" class="input-append col-sm-9">
-                        <input data-format="yyyy-MM-dd" type="text" class="datetimepicker"></input>
-                        <span class="add-on">
-                          <i class="fa fa-calendar btn btn-cima-gray" aria-hidden="true" data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-                          </i>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="row form-group  ">
-                      <label class="col-sm-3">Radios</label>
-                      <div class="col-sm-9">
-                        <div class="radio">
-                          <label>
-                          <input type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                          Option one is this and that&mdash;be sure to include why it's great
-                          </label>
-                        </div>
-                        <div class="radio">
-                          <label>
-                          <input type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                          Option two can be something else and selecting it will deselect option one
-                          </label>
-                        </div>
-                        <div class="radio disabled">
-                          <label>
-                          <input type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-                          Option three is disabled
-                          </label>
-                        </div>
-                        <label class="col-sm-3">Checkbox</label>
-                        <div class="col-sm-9">
-                          <div class="checkbox">
-                            <label>
-                            <input type="checkbox"> Check me out
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row text-center">
-                    <button type="submit" class="btn btn-cima-red">Sign in</button>
-                  </div>
-                </form>
-              </div>
-              <!--<div class="panel-footer">Panel footer</div>-->
-            </div>
-          </div>
-
-          <!-- Breadcrumb END -->
-
+        </div>
       </div>
 
     </div> <!-- Principal container END -->
@@ -355,9 +268,9 @@
 
       <!-- Enlaces START -->
 
-      <div class="row clean-margin sitios">
-        <div class="container center">
-          <div class="border">
+      <div class="sitios">
+        <div class="center">
+          <div class="container border">
             <h3>Sitios relacionados</h3>
             <div class="row">
               <div class="col-md-1 col-md-offset-2 col-sm-3 col-xs-3 links">
