Pantalla de error
Va

--- a/error.html
+++ b/error.html
@@ -245,15 +245,18 @@
           </ol>
         </div>
       <!-- Breadcrumb END -->
-        <h2>Disculpa, no encontramos la página solicitada.</h2>
         <div class="panel">
+          <div class="panel-header">
+            <h2>Disculpa, no encontramos la página solicitada.</h2>
+          </div>
           <div class="panel-body">
+            <img class="number-error img-responsive" src="img/error404.png" alt="404"/>
             <p>Es posible que ya no exista en el sitio, haya cambiado de ubicación o no esté disponible temporalmente.</p>
             <p>Intenta lo siguiente:</p>
             <ul>
               <li>Verifica que hayas escrito correctamente la dirección.</li>
-              <li>Haz clic en la opción <a href="javascript:history.go(-1)" >Atrás</a> para intentar otro vínculo.</li>
-              <li>Utiliza el <a href="/swb/cima/Mapa_de_sitio" >mapa de sitio</a> del portal para ubicar la ruta de la página que deseas consultar.</li>
+              <li>Haz clic en la opción <strong><a href="javascript:history.go(-1)" >Atrás</a></strong> para intentar otro vínculo.</li>
+              <li>Utiliza el <strong><a href="/swb/cima/Mapa_de_sitio" >mapa de sitio</a></strong> del portal para ubicar la ruta de la página que deseas consultar.</li>
               <li>Introduce en el campo de búsqueda una palabra clave que te ayude a encontrar la página que necesitas.</li>
             </ul>
           </div>
