--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
+                <li class="hidden-lg hidden-md hidden-sm"><a href="#">Inicio</a></li>
                 <li class="dropdown">
                   <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Producción <span class="caret"></span></a>
                   <ul class="dropdown-menu">
